objects/AccountHierarchyLevel__c.object
<CustomObject>
    <fields>
        <fullName>AccountHierarchyLevelEID__c</fullName>
        <description>The Enterprise ID for this Account Hierarchy Level.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Account Hierarchy Level.</inlineHelpText>
        <label>Account Hierarchy Level EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountHierarchyLevelLabelName__c</fullName>
        <label>Level Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountHierarchyLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Hierarchy Level</label>
        <referenceTo>AccountHierarchyLevel__c</referenceTo>
        <relationshipLabel>Account Hierarchy Levels</relationshipLabel>
        <relationshipName>AccountHierarchyLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchy Levels</relationshipLabel>
        <relationshipName>AccountHierarchyLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LevelNumber__c</fullName>
        <label>Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Hierarchy Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountHierarchyLevel__c</columns>
        <columns>AccountHierarchyLevelLabelName__c</columns>
        <columns>LevelNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Hierarchy Level ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Hierarchy Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>